security(backend): WebSocket 출처를 명시적으로 제한
- HTTP CORS와 WebSocket이 동일한 허용 출처 정책을 공유
- 자격 증명 요청의 빈 출처 목록과 와일드카드 설정을 기동 시 거부
- 출처 정규화와 안전하지 않은 설정에 대한 단위 테스트 추가